--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,30 +1,38 @@
 pipeline {
-    agent {
+    agent
+    /* {
         docker {
             image 'maven:3.9.0'
             args '-v /root/.m2:/root/.m2'
         }
-    }
+    }*/
     stages {
         stage('Build') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+               echo "this is build stage"
+                // sh 'mvn -B -DskipTests clean package'
             }
         }
         stage('Test') {
             steps {
-                sh 'mvn test'
+                echo "this is test stage "
+                // sh 'mvn test'
             }
-            post {
+           /* post {
                 always {
                     junit 'target/surefire-reports/*.xml'
                 }
+            } */
+        }
+        stage('deploy') {
+            steps {
+               echo "this is deploy stage"
             }
         }
-        stage('Deliver') {
+       /* stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
             }
-        }
+        }*/
     }
 }
