--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,30 +12,29 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-               echo "this is build stage"
-                // sh 'mvn -B -DskipTests clean package'
+              sh 'mvn -B -DskipTests clean package'
             }
         }
-        stage('Test') {
-            steps {
-                echo "this is test stage "
-                // sh 'mvn test'
-            }
-           /* post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            } */
-        }
-        stage('deploy') {
-            steps {
-               echo "this is deploy stage"
-            }
-        }
-       /* stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-            }
-        }*/
-    }
+        //  stage('Test') {
+        //     steps {
+        //         echo "this is test stage "
+        //          sh 'mvn test'
+        //     }
+        //     post {
+        //         always {
+        //             junit 'target/surefire-reports/*.xml'
+        //         }
+        //     } 
+        // }
+        // stage('deploy') {
+        //     steps {
+        //        echo "this is deploy stage"
+        //     }
+        // }
+        // stage('Deliver') {
+        //     steps {
+        //         sh './jenkins/scripts/deliver.sh'
+        //     }
+        // }
+    } 
 }
