--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,40 +1,41 @@
 pipeline {
     agent {
-  label 'DevServer'
-}
-
-    /* {
-        docker {
-            image 'maven:3.9.0'
-            args '-v /root/.m2:/root/.m2'
-        }
-    }*/
+        label 'DevServer'
+    }
+    tools {
+        maven 'mymaven'
+    }
     stages {
         stage('Build') {
             steps {
-              sh 'mvn -B -DskipTests clean package'
+                sh 'mvn -B -DskipTests clean package'
+            }
+            post {
+                success {
+                    archiveArtifacts artifacts: '**/target/*.war'
+                }
             }
         }
-        //  stage('Test') {
-        //     steps {
-        //         echo "this is test stage "
-        //          sh 'mvn test'
-        //     }
-        //     post {
-        //         always {
-        //             junit 'target/surefire-reports/*.xml'
-        //         }
-        //     } 
-        // }
-        // stage('deploy') {
-        //     steps {
-        //        echo "this is deploy stage"
-        //     }
-        // }
-        // stage('Deliver') {
-        //     steps {
-        //         sh './jenkins/scripts/deliver.sh'
-        //     }
-        // }
-    } 
+    //  stage('Test') {
+    //     steps {
+    //         echo "this is test stage "
+    //          sh 'mvn test'
+    //     }
+    //     post {
+    //         always {
+    //             junit 'target/surefire-reports/*.xml'
+    //         }
+    //     }
+    // }
+    // stage('deploy') {
+    //     steps {
+    //        echo "this is deploy stage"
+    //     }
+    // }
+    // stage('Deliver') {
+    //     steps {
+    //         sh './jenkins/scripts/deliver.sh'
+    //     }
+    // }
+    }
 }
